Console UI changes